[package]
name = "macaroons"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
canonical_json = "0.5.0"
crypto-common = { version = "0.1.6", features = ["rand_core"] }
generic-array = { version = "0.14.7", features = ["serde"] }
hmac = "0.12.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
thiserror = "1.0.56"

[dev-dependencies]
rand = "0.8.5"
sha2 = "0.10.8"
